<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PASS</string>
    <string name="title_section1">Connect</string>
    <string name="title_section2">Teleoperation</string>
    <string name="title_section3">Commands</string>
    <string name="title_section4">States</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Update</string>
    <string name="action_settings">Settings</string>
    <string name="title_ip">NAO IP:</string>
    <string name="title_ftp">FTP connect:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_behavior">Available:</string>
    <string name="btn_body">Body</string>
    <string name="btn_head">Head</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="input_ip">192.168.90.114</string>
    <string name="input_login">nao</string>
    <string name="input_pass">nao</string>

</resources>
